2001-01-26  Paolo Maggi  <maggi@athena.polito.it>

	* plugin.h: new field modify_an_existing_doc 

	* plugin.c (gedit_plugin_load) : default setting for 
	modify_an_existing_doc is FALSE

	* window.h:
	* window.c: new function gedit_window_set_widgets_sensitivity_ro 

	* file.c (gedit_file_save_as_ok_sel)(gedit_file_open_ok_sel)
	* document.c (gedit_document_load )
	* recent.c (recent_cb)
	* view.c (gedit_view_changed_cb)(gedit_view_add_cb)(gedit_view_remove):
	  correctly set menu and toolbar item sensitivity when a read only file
	  is opened (or saved)


2000-12-14  Alex Roberts  <bse@bakterium.com>

	* prefs.c (gedit_prefs_save_settings): only save the run flag 
	if it's FALSE. we really dont need to save it each time we save.

	* file.c: added missing semicolon to the message. now it
	actually compile ;)

2000-11-28  Chema Celorio  <chema@celorio.com>

	* file.c: add message for Translators

2000-11-20  Chema Celorio  <chema@celorio.com>

	* new branch: HEAD is going to get ported to the
	new text widget and gnome-vfs.
	This is the unstable branch of gedit.
	
2000-11-22  Paolo Maggi  <maggi@athena.polito.it>

	* menus.c: litte menus and toolbar reorganization

	* plugin.c (gedit_plugins_menu_add): add an icon to the
	"Manager..." menu entry

	* dialogs/replace.glade: cosmetic layout changes

2000-11-20  Chema Celorio  <chema@celorio.com>

	* dialogs/about.glade: Added paolo and roberto to the about
	box.

	* prefs.c (gedit_prefs_load_settings): fix a crash.

2000-11-20  Paolo Maggi  <maggi@athena.polito.it>

	* recent.c (recent_cb): when needed update the recent file 
	menu in all open windows

2000-11-18  Paolo Maggi  <maggi@athena.polito.it>

        * plugin.c: #defined DATA_PLUGINS_TO_REMOVE
	(gedit_plugins_menu_add): fix problems when used
	with more than one toplevel windows; remove old broken
	code

	* plugin.h: menu_item attribute commented because it is not 
	needed

	* window.c (gedit_window_set_widgets_sensitivity): fix 