@@ -1,5 +1,9 @@
 2001-01-26  Paolo Maggi  <maggi@athena.polito.it>
 
+	* menus.c: added a separator in the toolbar
+
+2001-01-26  Paolo Maggi  <maggi@athena.polito.it>
+
 	* plugin.h: new field modify_an_existing_doc 
 
 	* plugin.c (gedit_plugin_load) : default setting for 
@@ -14,7 +18,6 @@
 	* view.c (gedit_view_changed_cb)(gedit_view_add_cb)(gedit_view_remove):
 	  correctly set menu and toolbar item sensitivity when a read only file
 	  is opened (or saved)
-
 
 2000-12-14  Alex Roberts  <bse@bakterium.com>
 
